# tree-sitter-bram

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package.json  pom.xml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-bram.pc.in
bindings/c/tree_sitter/: tree-sitter-bram.h
bindings/go/: binding.go  binding_test.go
bindings/java/main/io/github/treesitter/jtreesitter/bram/: TreeSitterBram.java
bindings/java/test/: TreeSitterBramTest.java
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bram/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBramTests/: TreeSitterBramTests.swift
bindings/zig/: root.zig  test.zig
src/: grammar.json  node-types.json  parser.c
